<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        tools:context=".ui.main.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/llHeadings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bgImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pattern1" />

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/heading"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40dp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/heading"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/sub_heading"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="18dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llHeadings"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvFiction"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="4sp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"

                        >

                        <ImageView
                            android:id="@+id/ic_fiction"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_fiction" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toStartOf="@+id/ic_next"
                            android:layout_toEndOf="@+id/ic_fiction"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/fiction"
                            android:textColor="@color/colorGreyDark"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/ic_next"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_next" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvDrama"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="4sp"
                    app:cardUseCompatPadding="true"

                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"

                        >

                        <ImageView
                            android:id="@+id/ic_drama"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_drama" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/ic_drama"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/drama"
                            android:textColor="@color/colorGreyDark"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_next" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvHumor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="4sp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"

                        >

                        <ImageView
                            android:id="@+id/ic_humour"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_humour" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/ic_humour"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/humor"
                            android:textColor="@color/colorGreyDark"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_next" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvPolitics"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="4sp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"

                        >

                        <ImageView
                            android:id="@+id/ic_politics"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_politics" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/ic_politics"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/politics"
                            android:textColor="@color/colorGreyDark"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_next" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvPhilosophy"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="4sp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"

                        >

                        <ImageView
                            android:id="@+id/ic_philosophy"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_philosophy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/ic_philosophy"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/philosophy"
                            android:textColor="@color/colorGreyDark"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_next" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvHistory"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="4sp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"

                        >

                        <ImageView
                            android:id="@+id/ic_history"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_history" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/ic_history"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/history"
                            android:textColor="@color/colorGreyDark"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_next" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvAdventure"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="4sp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"

                        >

                        <ImageView
                            android:id="@+id/ic_adventure"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_adventure" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/ic_adventure"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/adventure"
                            android:textColor="@color/colorGreyDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_next" />
                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>
</layout>
